--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
       border-color: transparent;
       color: #fff !important;
   }
+  .navbar-nav.navbar-center {
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+ }
   footer .glyphicon {
       font-size: 20px;
       margin-bottom: 20px;
@@ -233,7 +238,7 @@
     
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-left">
+      <ul class="nav navbar-nav navbar-center">
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#experience">Experience</a></li>
