--- a/index.html
+++ b/index.html
@@ -356,7 +356,6 @@
     </div>
     </div>
    
-
 <!-- Container (Project Section) -->
 <div id="project" class="container-fluid">
   <h2 class="text-center">Projects</h2>
@@ -378,7 +377,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img/project-blog.png" alt="Resume + Porfolio" width="400" height="300">
+        <img src="img/resume-portfolio.png" alt="Resume + Porfolio" width="400" height="300">
         <p><strong><a href="https://mariaelisa25.github.io/">Resume + Portfolio Website</a></strong></p>
         <p>Developed this website using Github and Boostrap. </p>
       </div>
