--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
       <div class="thumbnail">
         <img src="img/resume-portfolio.png" alt="Resume + Porfolio" width="400" height="300">
         <p><strong><a href="https://mariaelisa25.github.io/">Resume + Portfolio Website</a></strong></p>
-        <p>Developed this website using Github and Boostrap. </p>
+        <p>Developed this website using Github and Bootstrap. </p>
       </div>
     </div> 
     </div>
