--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
 
 	<div class="row">
 		<div class="col-md-4">
-			<h4>freeCodeCamp</h4>
-			<p class="education-period">
-				2017 - 2018	</p>
+			<h5>freeCodeCamp</h5>
+			<h5 class="education-period">
+				2017 - 2018	</h5>
 	</div>
     
 		<div class="col-md-8">
@@ -307,7 +307,7 @@
 		<div class="col-md-4">
 			<h4>Guangdong University of Foreign Studies</h4>
 			<p class="education-period">
-				Sept 2015 - July 2016	</p>
+				Sept 2015 - July 2016</p>
 	</div>
     
 		<div class="col-md-8">
@@ -338,7 +338,7 @@
                     Activities: PDKK HKY Guangzhou (2012 - 2016),  Participated Consulate Genereal of Republic of Indonesia's events</span>
 				<span class="experience-details"><div>
 					<span class="location">
-						<span class="glyphicon glyphicon-map-marker"></span> Online</span></span>
+						<span class="glyphicon glyphicon-map-marker"></span> Guangzhou</span></span>
 			</p>
 		</div>
         </div>
