--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
 </div>
 
 <!-- Container (About Me Section) -->
-<div id="about-me" class="container-fluid text-center">
+<div id="about-me" class="container-fluid ">
   
-      <h2>About Me</h2>
+      <h2 class="text-center">About Me</h2>
       
      <h5>Hey! I'm Maria. I graduated from South China University of Technology in 2015, major in Computer Science. I began my own coding adventure in 2009 when I need to code and design my blog, probably why I still love coding and never turn back. As I developed my skills, I studided Computer Science at South China University of Technology. My passions draw near me towards tech and design. I can't take my eyes of biz, digital media, and tech. </h5>
       
