--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
    </div>
 
 <!-- Container (Experience Section) -->
-<div id="experience" class="container-fluid text-center">
-  <h2>Work Experience</h2>
+<div id="experience" class="container-fluid">
+  <h2 class="text-center">Work Experience</h2><br>
   
   <h5><strong><i>Marketing</i></strong>, PT. Kohyei Indonesia, March 2017 - Sept 2017</h5>
   <h5>A trading company engaged in chemicals, rubbers, plastics, industrial materials, coatings, and adhesives. As marketing and interpreter for Mandarin to Indonesian and vice versa, my responsibilities are <u>creating and identifying potential new clients and suppliers, coordinating business correspondence and mailing lists, processing orders, quotation and invoices and working with suppliers and vendors.</u> </h5>
