--- a/index.html
+++ b/index.html
@@ -229,6 +229,212 @@
         font-size: 150px;
     }
   }
+  
+  
+  /*!
+ * Timeline
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+.timeline {
+    position: relative;
+    padding: 0;
+    list-style: none;
+}
+
+.timeline:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 40px;
+    width: 2px;
+    margin-left: -1.5px;
+    background-color: #f1f1f1;
+}
+
+.timeline>li {
+    position: relative;
+    margin-bottom: 50px;
+    min-height: 50px;
+}
+
+.timeline>li:before,
+.timeline>li:after {
+    content: " ";
+    display: table;
+}
+
+.timeline>li:after {
+    clear: both;
+}
+
+.timeline>li .timeline-panel {
+    float: right;
+    position: relative;
+    width: 100%;
+    padding: 0 20px 0 100px;
+    text-align: left;
+}
+
+.timeline>li .timeline-panel:before {
+    right: auto;
+    left: -15px;
+    border-right-width: 15px;
+    border-left-width: 0;
+}
+
+.timeline>li .timeline-panel:after {
+    right: auto;
+    left: -14px;
+    border-right-width: 14px;
+    border-left-width: 0;
+}
+
+.timeline>li .timeline-image {
+    z-index: 100;
+    position: absolute;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    margin-left: 0;
+    border-radius: 100%;
+    text-align: center;
+    color: #fff;
+    background-color: #ffdae9;
+}
+
+.timeline>li .timeline-image h4 {
+    margin-top: 12px;
+    font-size: 10px;
+    line-height: 14px;
+}
+
+.timeline>li.timeline-inverted>.timeline-panel {
+    float: right;
+    padding: 0 20px 0 100px;
+    text-align: left;
+}
+
+.timeline>li.timeline-inverted>.timeline-panel:before {
+    right: auto;
+    left: -15px;
+    border-right-width: 15px;
+    border-left-width: 0;
+}
+
+.timeline>li.timeline-inverted>.timeline-panel:after {
+    right: auto;
+    left: -14px;
+    border-right-width: 14px;
+    border-left-width: 0;
+}
+
+.timeline>li:last-child {
+    margin-bottom: 0;
+}
+
+.timeline .timeline-heading h4 {
+    margin-top: 0;
+    color: inherit;
+}
+
+.timeline .timeline-heading h4.subheading {
+    text-transform: none;
+}
+
+.timeline .timeline-body>p,
+.timeline .timeline-body>ul {
+    margin-bottom: 0;
+}
+
+@media(min-width:768px) {
+    .timeline:before {
+        left: 50%;
+    }
+
+    .timeline>li {
+        margin-bottom: 100px;
+        min-height: 100px;
+    }
+
+    .timeline>li .timeline-panel {
+        float: left;
+        width: 41%;
+        padding: 0 20px 20px 30px;
+        text-align: right;
+    }
+
+    .timeline>li .timeline-image {
+        left: 50%;
+        width: 100px;
+        height: 100px;
+        margin-left: -50px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 16px;
+        font-size: 13px;
+        line-height: 18px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        float: right;
+        padding: 0 30px 20px 20px;
+        text-align: left;
+    }
+}
+
+@media(min-width:992px) {
+    .timeline>li {
+        min-height: 150px;
+    }
+
+    .timeline>li .timeline-panel {
+        padding: 0 20px 20px;
+    }
+
+    .timeline>li .timeline-image {
+        width: 150px;
+        height: 150px;
+        margin-left: -75px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 30px;
+        font-size: 18px;
+        line-height: 26px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        padding: 0 20px 20px;
+    }
+}
+
+@media(min-width:1200px) {
+    .timeline>li {
+        min-height: 170px;
+    }
+
+    .timeline>li .timeline-panel {
+        padding: 0 20px 20px 100px;
+    }
+
+    .timeline>li .timeline-image {
+        width: 170px;
+        height: 170px;
+        margin-left: -85px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 40px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        padding: 0 100px 20px 20px;
+    }
+}
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -286,18 +492,49 @@
   <h2>Education</h2><br>
 
 <h5>South China University of Technology, Guangzhou, Computer Science</h5>
-	
+  
    </div>
 
 <!-- Container (Experience Section) -->
 <div id="experience" class="container-fluid">
-  <h2 class="text-center">Work Experience</h2><br>
+  <h2 class="text-center">Experience</h2><br>
   
-  <h5><strong><i>Marketing</i></strong>, PT. Kohyei Indonesia, March 2017 - Sept 2017</h5>
-  <h5>A trading company engaged in chemicals, rubbers, plastics, industrial materials, coatings, and adhesives. As marketing and interpreter for Mandarin to Indonesian and vice versa, my responsibilities are <u>creating and identifying potential new clients and suppliers, coordinating business correspondence and mailing lists, processing orders, quotation and invoices and working with suppliers and vendors.</u> </h5>
-  
-  <h5><strong><i>Undergraduate Researcher</strong></i>, South China University of Technology, March 2014 - June 2014</h5>
-  <h5>Project research: <u>mobile map services.</u> My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</h5>
+   <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h5>March 2017 - Sept 2017<br>
+                                    Marketing<br>
+                                    PT. Kohyei Indonesia</h5>
+                                </div>
+                                <div class="timeline-body">
+                                    <p>A trading company engaged in chemicals, rubbers, plastics, industrial materials, coatings, and adhesives. As marketing and interpreter for Mandarin to Indonesian and vice versa, my responsibilities are creating and identifying potential new clients and suppliers, coordinating business correspondence and mailing lists, processing orders, quotation and invoices and working with suppliers and vendors</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h5>March 2014 - June 2014<br>
+                                    Undergradaute Researcher<br>
+                                    South China University of Technology
+                                    </h5>
+                                </div>
+                                <div class="timeline-body">
+                                    <p>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</p>
+                                </div>
+                            </div>           
+                    </ul>
+                </div>
+                </div>
   
 </div>
 
