--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     left: 40px;
     width: 2px;
     margin-left: -1.5px;
-    background-color: #f1f1f1;
+    background-color: #818181
 }
 
 .timeline>li {
@@ -302,7 +302,7 @@
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #ffdae9;
+    background-color: #ffe6cc;
 }
 
 .timeline>li .timeline-image h4 {
