--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       margin-bottom: 30px;
   }  
   
-    h5 {
+  h5 {
       font-size: 18px;
       line-height: 1.375em;
       color: #303030;
@@ -230,211 +230,85 @@
     }
   }
   
-  
-  /*!
+ /*!
  * Timeline
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+* {
+	pading: 0;
+	margin: 0;
+	position: relative;
+}
+
 .timeline {
-    position: relative;
-    padding: 0;
-    list-style: none;
+	padding: 40px 0px;
+	width: 80%;
+	margin-left: 10%;
+	margin-bottom: 40px;
 }
 
 .timeline:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 40px;
-    width: 2px;
-    margin-left: -1.5px;
-    background-color: #818181
+	content: "";
+	position: absolute;
+	top: 40px;
+	left: 65px;
+	width: 3px;
+	height: calc(100% - 80px);
+	background: #ffe6cc;
 }
 
-.timeline>li {
-    position: relative;
-    margin-bottom: 50px;
-    min-height: 50px;
+.timeline .column {
+	margin: 40px 40px 40px 120px;
 }
 
-.timeline>li:before,
-.timeline>li:after {
-    content: " ";
-    display: table;
+.timeline .column .title h1 {
+	font-size: 60px;
+	color: rgba(0,0,0,0.1);
+	font-family: Lora;
+	letter-spacing: 2px;
 }
 
-.timeline>li:after {
-    clear: both;
+.timeline .column .title h1:before {
+	content: "";
+	position: absolute;
+	left: -64px;
+	top: 86px;
+	width: 10px;
+	height: 10px;
+	background: #fff;
+	border: 11px solid #ffe6cc;
 }
 
-.timeline>li .timeline-panel {
-    float: right;
-    position: relative;
-    width: 100%;
-    padding: 0 20px 0 100px;
-    text-align: left;
+.timeline .column .title h2 {
+	margin-top: -10px;
+	font-size: 33px;
 }
 
-.timeline>li .timeline-panel:before {
-    right: auto;
-    left: -15px;
-    border-right-width: 15px;
-    border-left-width: 0;
+.timeline .column .description p {
+	font-size: 13px;
+	line-height: 20px;
+	margin-left: -1px;
+	margin-top: 10px;
+	font-family: Lora;
 }
 
-.timeline>li .timeline-panel:after {
-    right: auto;
-    left: -14px;
-    border-right-width: 14px;
-    border-left-width: 0;
+.main {
+	width: 80%;
+	margin-left: 10%;
+	margin-top: 80px;
 }
 
-.timeline>li .timeline-image {
-    z-index: 100;
-    position: absolute;
-    left: 0;
-    width: 80px;
-    height: 80px;
-    margin-left: 0;
-    border-radius: 100%;
-    text-align: center;
-    color: #fff;
-    background-color: #ffe6cc;
+.main h1 {
+	font-size: 80px;
+	line-height: 60px;
 }
 
-.timeline>li .timeline-image h4 {
-    margin-top: 12px;
-    font-size: 10px;
-    line-height: 14px;
+.main p {
+	
+	text-align: right;
+    font-family: Lora;
 }
 
-.timeline>li.timeline-inverted>.timeline-panel {
-    float: right;
-    padding: 0 20px 0 100px;
-    text-align: left;
-}
-
-.timeline>li.timeline-inverted>.timeline-panel:before {
-    right: auto;
-    left: -15px;
-    border-right-width: 15px;
-    border-left-width: 0;
-}
-
-.timeline>li.timeline-inverted>.timeline-panel:after {
-    right: auto;
-    left: -14px;
-    border-right-width: 14px;
-    border-left-width: 0;
-}
-
-.timeline>li:last-child {
-    margin-bottom: 0;
-}
-
-.timeline .timeline-heading h4 {
-    margin-top: 0;
-    color: inherit;
-}
-
-.timeline .timeline-heading h4.subheading {
-    text-transform: none;
-}
-
-.timeline .timeline-body>p,
-.timeline .timeline-body>ul {
-    margin-bottom: 0;
-}
-
-@media(min-width:768px) {
-    .timeline:before {
-        left: 50%;
-    }
-
-    .timeline>li {
-        margin-bottom: 100px;
-        min-height: 100px;
-    }
-
-    .timeline>li .timeline-panel {
-        float: left;
-        width: 41%;
-        padding: 0 20px 20px 30px;
-        text-align: right;
-    }
-
-    .timeline>li .timeline-image {
-        left: 50%;
-        width: 100px;
-        height: 100px;
-        margin-left: -50px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 16px;
-        font-size: 13px;
-        line-height: 18px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        float: right;
-        padding: 0 30px 20px 20px;
-        text-align: left;
-    }
-}
-
-@media(min-width:992px) {
-    .timeline>li {
-        min-height: 150px;
-    }
-
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px;
-    }
-
-    .timeline>li .timeline-image {
-        width: 150px;
-        height: 150px;
-        margin-left: -75px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 30px;
-        font-size: 18px;
-        line-height: 26px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 20px 20px;
-    }
-}
-
-@media(min-width:1200px) {
-    .timeline>li {
-        min-height: 170px;
-    }
-
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
-    }
-
-    .timeline>li .timeline-image {
-        width: 170px;
-        height: 170px;
-        margin-left: -85px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 40px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 100px 20px 20px;
-    }
-}
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -498,43 +372,27 @@
 <!-- Container (Experience Section) -->
 <div id="experience" class="container-fluid">
   <h2 class="text-center">Experience</h2><br>
-  
-   <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h5>March 2017 - Sept 2017<br>
-                                    Marketing<br>
-                                    PT. Kohyei Indonesia</h5>
-                                </div>
-                                <div class="timeline-body">
-                                    <p>A trading company engaged in chemicals, rubbers, plastics, industrial materials, coatings, and adhesives. As marketing and interpreter for Mandarin to Indonesian and vice versa, my responsibilities are creating and identifying potential new clients and suppliers, coordinating business correspondence and mailing lists, processing orders, quotation and invoices and working with suppliers and vendors</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h5>March 2014 - June 2014<br>
-                                    Undergradaute Researcher<br>
-                                    South China University of Technology
-                                    </h5>
-                                </div>
-                                <div class="timeline-body">
-                                    <p>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</p>
-                                </div>
-                            </div>           
-                    </ul>
-                </div>
-                </div>
+
+
+<div class="timeline">
+	<div class="column">
+		<div class="title">
+			<h1> March - Sept 2017 </h1>
+			<h2> Marketing <br> PT. Kohyei Indonesia</h2>
+		</div>
+			<p>As marketing and interpreter for Mandarin to Indonesian and vice versa, my responsibilities are creating and identifying potential new clients and suppliers, coordinating business correspondence and mailing lists, processing orders, quotation and invoices and working with suppliers and vendors.</p>
+		
+	</div>
+
+	<div class="column">
+		<div class="title">
+			<h1>March - June 2014</h1>
+			<h2>Undergraduate Researcher<br>South China University of Technology</h2>
+		</div>
+			<p>My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service </p>
+		
+	</div>
+ </div>
   
 </div>
 
