--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 .timeline:before {
 	content: "";
 	position: absolute;
-	top: 40px;
+	top: 35px;
 	left: 65px;
 	width: 3px;
 	height: calc(100% - 80px);
@@ -262,7 +262,7 @@
 }
 
 .timeline .column .title h1 {
-	font-size: 60px;
+	font-size: 45px;
 	color: rgba(0,0,0,0.1);
 	font-family: Lora;
 	letter-spacing: 2px;
@@ -279,10 +279,6 @@
 	border: 11px solid #ffe6cc;
 }
 
-.timeline .column .title h2 {
-	margin-top: -10px;
-	font-size: 33px;
-}
 
 .timeline .column .description p {
 	font-size: 13px;
@@ -298,16 +294,6 @@
 	margin-top: 80px;
 }
 
-.main h1 {
-	font-size: 80px;
-	line-height: 60px;
-}
-
-.main p {
-	
-	text-align: right;
-    font-family: Lora;
-}
 
   </style>
 </head>
@@ -371,8 +357,7 @@
 
 <!-- Container (Experience Section) -->
 <div id="experience" class="container-fluid">
-  <h2 class="text-center">Experience</h2><br>
-
+  <h2 class="text-center">Experience</h2>
 
 <div class="timeline">
 	<div class="column">
