--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
 }
 
 .timeline .column .title h1 {
-	font-size: 35px;
-	color: rgba(0,0,0,0.1);
+	font-size: 30px;
+	color: #d6d6c2;
 	font-family: Lora;
 }
 
@@ -271,7 +271,6 @@
 	content: "";
 	position: absolute;
 	left: -64px;
-	top: 86px;
 	width: 10px;
 	height: 10px;
 	background: #fff;
