--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
           <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Marketing<br>PT. Kohyei Indonesia<br>3/2017 - 9/2017</h4>
+              <h4 class="timeline-title"><strong>Marketing</strong><br><i>PT. Kohyei Indonesia</i><br>3/2017 - 9/2017</h4>
               
             </div>
             <div class="timeline-body">
@@ -429,7 +429,7 @@
           <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Undergraduate Researcher<br>South China University of Technology<br>3/2014 - 6/2014</h4>
+              <h4 class="timeline-title"><strong>Undergraduate Researcher</strong><br><i>South China University of Technology</i><br>3/2014 - 6/2014</h4>
             </div>
             <div class="timeline-body">
               <p>My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</p>
