--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 <a href="https://mariaelisa25.github.io/" class="fa fa-github"></a>
 <a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
 <a href="http://pinterest.com/marialeung_" class="fa fa-pinterest"></a>
-<a href="#" class="fa fa-file"></a>
+<a href="" class="fa fa-file"></a>
 
   
 </div>
