--- a/index.html
+++ b/index.html
@@ -463,9 +463,9 @@
     <div class="progress-bar progress-bar-custom" style="width:70%"></div>
   </div><br>
   
-    <h4><strong>Android Development</strong></h4>
+    <h4><strong>JavaScript</strong></h4>
   <div class="progress">
-    <div class="progress-bar progress-bar-custom" style="width:55%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:35%"></div>
   </div><br>
   
   </div>
@@ -487,9 +487,9 @@
     <div class="progress-bar progress-bar-custom" style="width:80%"></div>
   </div><br>
   
-  <h4><strong>Problem Solving</strong></h4>
+  <h4><strong>Android Development</strong></h4>
   <div class="progress">
-    <div class="progress-bar progress-bar-custom" style="width:70%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:40%"></div>
   </div><br>
 
     </div>
