--- a/index.html
+++ b/index.html
@@ -400,8 +400,21 @@
     <!-- Container (Education) -->
 <div id="education" class="container-fluid bg-mint text-center">
   <h2>Education</h2><br>
-
-<h5>South China University of Technology, Guangzhou, Computer Science</h5>
+	
+	<div class="row">
+  <div class="col-md-4">
+	<img src="img/scut.png" class="img-circle person" width="255" height="255">
+   	<h5>South China University of Technology, Guangzhou, Computer Science</h5>
+  </div>
+  <div class="col-md-4">
+	<img src="img/gdufs.png" class="img-circle person" width="255" height="255">
+   	<h5>South China University of Technology, Guangzhou, Computer Science</h5>
+  </div>
+  <div class="col-md-4">
+	<img src="img/fcc.jpg" class="img-circle person" width="255" height="255">
+   	<h5>South China University of Technology, Guangzhou, Computer Science</h5>
+  </div>
+</div>
   
    </div>
 
@@ -529,7 +542,7 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>DESIGN + CODE WITH<a class="fa fa-heart"></a>by M.E</p>
+  <p>DESIGN + CODE WITH<i class="fa fa-heart"></i>by M.E</p>
 
 </footer>
 
