--- a/index.html
+++ b/index.html
@@ -404,15 +404,15 @@
 	<div class="row">
   <div class="col-md-4">
 	<img src="img/scut.png" class="img-circle person" width="140" height="140">
-   	<h5>South China University of Technology, Guangzhou, Computer Science</h5>
+	  <h5><strong>South China University of Technology</strong><br>Guangzhou, 2011 - 2015<br>Bachelor of Engineering major in Computer Science</h5>
   </div>
   <div class="col-md-4">
 	<img src="img/gdufs.png" class="img-circle person" width="140" height="140">
-   	<h5>South China University of Technology, Guangzhou, Computer Science</h5>
+	  <h5><strong>Guangdong Universtiy of Foreign Studies</strong><br>Guangzhou, 2015 - 2016<br>Chinese Language</h5>
   </div>
   <div class="col-md-4">
 	<img src="img/fcc.jpg" class="img-circle person" width="140" height="140">
-   	<h5>South China University of Technology, Guangzhou, Computer Science</h5>
+	  <h5><strong>Free Code Camp</strong><br>2017 - 2018<br>Full Stack Web Development</h5>
   </div>
 </div>
   
