--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
   </div>
   <div class="col-md-4">
 	<img src="img/fcc.jpg" class="img-circle person" width="140" height="140">
-	  <h5><strong><a href="http://freecodecamp.com">Free Code Camp</a></strong><br>2017 - 2018<br><i>Full Stack Web Development</i></h5>
+	  <h5><strong><a href="http://freecodecamp.org">Free Code Camp</a></strong><br>2017 - 2018<br><i>Full Stack Web Development</i></h5>
   </div>
 </div>
   
