--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <li><a href="#education">Education</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#skill">Skills</a></li>
-        <li><a href="#project">Projects</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
       </ul>
     </div>
   </div>
@@ -449,9 +449,6 @@
         
     </ul>
 
-		
-        
-  
 </div>
 
 <!-- Container (Skill Section) -->
@@ -509,9 +506,9 @@
     </div>
     </div>
    
-<!-- Container (Project Section) -->
-<div id="project" class="container-fluid">
-  <h2 class="text-center">Projects</h2>
+<!-- Container (Portfolio Section) -->
+<div id="portfolio" class="container-fluid">
+  <h2 class="text-center">Portfolio</h2>
   
      <div class="row text-center slideanim">
     <div class="col-sm-4">
