--- a/index.html
+++ b/index.html
@@ -343,8 +343,7 @@
 .timeline-body > p + p {
   margin-top: 5px;
 }
-
-
+	  
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -425,7 +424,7 @@
     
     <ul class="timeline">
         <li>
-          <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+          <div class="timeline-badge"><i class="glyphicon glyphicon-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title"><strong>Marketing</strong><br><i>PT. Kohyei Indonesia</i><br>3/2017 - 9/2017</h4>
@@ -437,7 +436,7 @@
           </div>
         </li>
         <li class="timeline-inverted">
-          <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+          <div class="timeline-badge"><i class="glyphicon glyphicon-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title"><strong>Undergraduate Researcher</strong><br><i>South China University of Technology</i><br>3/2014 - 6/2014</h4>
