--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 <div class="jumbotron text-center">
 <img src="img/profile-me.jpg" class="img-circle person" width="255" height="255">
   <h1>Maria Elisa</h1>
-  <p>Web Design + App Developer + Blogger</p>
+  <p>Web Designer + App Developer + Blogger</p>
   
   <!-- Add font awesome icons -->
 <a href="mailto:maria_el25@yahoo.com" class="fa fa-envelope"></a>
