--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   position: absolute;
   content: " ";
   width: 3px;
-  background-color: #eeeeee;
+  background-color: black;
   left: 50%;
   margin-left: -1.5px;
 }
@@ -268,12 +268,12 @@
 .timeline > li > .timeline-panel {
   width: 46%;
   float: left;
-  border: 1px solid #d4d4d4;
+  border: 1px solid black;
   border-radius: 2px;
   padding: 20px;
   position: relative;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  -webkit-box-shadow: black;
+  box-shadow: black;
 }
 .timeline > li > .timeline-panel:before {
   position: absolute;
@@ -281,8 +281,8 @@
   right: -15px;
   display: inline-block;
   border-top: 15px solid transparent;
-  border-left: 15px solid #ccc;
-  border-right: 0 solid #ccc;
+  border-left: 15px solid black;
+  border-right: 0 solid black;
   border-bottom: 15px solid transparent;
   content: " ";
 }
@@ -308,7 +308,7 @@
   top: 16px;
   left: 50%;
   margin-left: -25px;
-  background-color: #999999;
+  background-color: black;
   z-index: 100;
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
@@ -331,7 +331,7 @@
   right: auto;
 }
 .timeline-badge.primary {
-  background-color: #2e6da4 !important;
+  background-color: black !important;
 }
 .timeline-title {
   margin-top: 0;
