--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
               
             </div>
             <div class="timeline-body">
-              <p>As marketing and interpreter for Mandarin to Indonesian and vice versa, my responsibilities are creating and identifying potential new clients and suppliers, coordinating business correspondence and mailing lists, processing orders, quotation and invoices and working with suppliers and vendors.</p>
+              <p>As marketing and interpreter for Mandarin to Indonesian and vice versa, my responsibilities are creating and identifying potential new clients and suppliers, coordinating business correspondence and mailing lists, processing orders, quotation and invoices and working with suppliers and vendors</p>
             </div>
           </div>
         </li>
