--- a/index.html
+++ b/index.html
@@ -180,12 +180,13 @@
       font-size: 20px;
       margin-bottom: 20px;
       color: #818181;
-  } 
+  }
+  
   .progress-bar-custom {
   background-color: #e6ccff;
   }
-    
- .timeline {
+
+  .timeline {
   list-style: none;
   padding: 20px 0 20px;
   position: relative;
@@ -196,7 +197,7 @@
   position: absolute;
   content: " ";
   width: 3px;
-  background-color: black;
+  background-color: #e0bfb6;
   left: 50%;
   margin-left: -1.5px;
 }
@@ -223,7 +224,7 @@
 .timeline > li > .timeline-panel {
   width: 46%;
   float: left;
-  border: 1px solid black;
+  border: 1px solid #e0bfb6;
   border-radius: 2px;
   padding: 20px;
   position: relative;
@@ -236,8 +237,8 @@
   right: -15px;
   display: inline-block;
   border-top: 15px solid transparent;
-  border-left: 15px solid black;
-  border-right: 0 solid black;
+  border-left: 15px solid #e0bfb6;
+  border-right: 0 solid #e0bfb6;
   border-bottom: 15px solid transparent;
   content: " ";
 }
@@ -263,7 +264,7 @@
   top: 16px;
   left: 50%;
   margin-left: -25px;
-  background-color: black;
+  background-color: #e0bfb6;
   z-index: 100;
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
@@ -286,7 +287,7 @@
   right: auto;
 }
 .timeline-badge.primary {
-  background-color: black !important;
+  background-color: #e0bfb6 !important;
 }
 .timeline-title {
   margin-top: 0;
@@ -342,6 +343,7 @@
         font-size: 150px;
     }
   }
+  
     
   </style>
 </head>
