--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   }
   
   .progress-bar-custom {
-  background-color: #e6ccff;
+  background-color: #ecc7c1;
   }
 
   .timeline {
@@ -197,7 +197,7 @@
   position: absolute;
   content: " ";
   width: 3px;
-  background-color: #e0bfb6;
+  background-color: #ecc7c1;
   left: 50%;
   margin-left: -1.5px;
 }
@@ -224,7 +224,7 @@
 .timeline > li > .timeline-panel {
   width: 46%;
   float: left;
-  border: 1px solid #e0bfb6;
+  border: 1px solid #ecc7c1;
   border-radius: 2px;
   padding: 20px;
   position: relative;
@@ -237,8 +237,8 @@
   right: -15px;
   display: inline-block;
   border-top: 15px solid transparent;
-  border-left: 15px solid #e0bfb6;
-  border-right: 0 solid #e0bfb6;
+  border-left: 15px solid #ecc7c1;
+  border-right: 0 solid #ecc7c1;
   border-bottom: 15px solid transparent;
   content: " ";
 }
@@ -264,7 +264,7 @@
   top: 16px;
   left: 50%;
   margin-left: -25px;
-  background-color: #e0bfb6;
+  background-color: #ecc7c1;
   z-index: 100;
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
@@ -287,7 +287,7 @@
   right: auto;
 }
 .timeline-badge.primary {
-  background-color: #e0bfb6 !important;
+  background-color: #ecc7c1 !important;
 }
 .timeline-title {
   margin-top: 0;
