--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>DESIGN + CODE WITH<i class="fa fa-heart"></i>by M.E</p><br>
+  <p>DESIGN + CODE WITH<i class="fa fa-heart"></i></p><div>
   <p>© 2017 by Maria Elisa</p>
 
 </footer>
