--- a/index.html
+++ b/index.html
@@ -50,12 +50,9 @@
   .container-fluid {
       padding: 60px 50px;
   }
-  .bg-pink {
-      background-color: #ffdae9;
-  }
   
   .bg-mint {
-      background-color: #e2fcea;
+      background-color: #e7f7ed;
   }
   
    .bg-blue {
