--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
       padding: 60px 50px;
   }
   
+  .bg-pink {
+      background-color: #ffdae9;
+  }
+  
   .bg-mint {
       background-color: #e7f7ed;
   }
@@ -395,7 +399,7 @@
     </div>
     
     <!-- Container (Education) -->
-<div id="education" class="container-fluid bg-mint text-center">
+<div id="education" class="container-fluid bg-pink text-center">
   <h2>Education</h2><br>
   
   <div class="row">
@@ -460,7 +464,7 @@
 </div>
 
 <!-- Container (Skill Section) -->
-<div id="skill" class="container-fluid text-center bg-blue">
+<div id="skill" class="container-fluid text-center bg-pink">
   <h2>Skills + Coding + Design</h2><br>
   
   <div class="row">
@@ -543,7 +547,7 @@
     </div>
      </div>
 
-<footer class="container-fluid text-center bg-purple">
+<footer class="container-fluid text-center bg-pink">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
