--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   } 
   
   .jumbotron {
-      background-color: #ffdae9;
+      background-color: #fee7ea;
       color: #fff;
       padding: 100px 25px;
       font-family: Cardo, sans-serif;
@@ -52,7 +52,7 @@
   }
   
   .bg-pink {
-      background-color: #ffdae9;
+      background-color: #fee7ea;
   }
   
   .bg-mint {
@@ -146,7 +146,7 @@
  
   .navbar {
       margin-bottom: 0;
-      background-color: #ffdae9;
+      background-color: #fee7ea;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -170,7 +170,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #ffdae9 !important;
+      color: #fee7ea !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
