--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   } 
   
   .jumbotron {
-      background-color: #fee7ea;
+      background-color: #ffdae9;
       color: #fff;
       padding: 100px 25px;
       font-family: Cardo, sans-serif;
@@ -50,13 +50,12 @@
   .container-fluid {
       padding: 60px 50px;
   }
-  
   .bg-pink {
-      background-color: #fee7ea;
+      background-color: #ffdae9;
   }
   
   .bg-mint {
-      background-color: #e7f7ed;
+      background-color: #e4ffde;
   }
   
    .bg-blue {
@@ -146,7 +145,7 @@
  
   .navbar {
       margin-bottom: 0;
-      background-color: #fee7ea;
+      background-color: #ffdae9;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -170,7 +169,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #fee7ea !important;
+      color: #ffdae9 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
@@ -184,7 +183,7 @@
   }
   
   .progress-bar-custom {
-  background-color: #dacaf7;
+  background-color: #e6ccff;
   }
 
   .timeline {
@@ -399,7 +398,7 @@
     </div>
     
     <!-- Container (Education) -->
-<div id="education" class="container-fluid bg-pink text-center">
+<div id="education" class="container-fluid bg-mint text-center">
   <h2>Education</h2><br>
   
   <div class="row">
@@ -464,7 +463,7 @@
 </div>
 
 <!-- Container (Skill Section) -->
-<div id="skill" class="container-fluid text-center bg-pink">
+<div id="skill" class="container-fluid text-center bg-blue">
   <h2>Skills + Coding + Design</h2><br>
   
   <div class="row">
@@ -547,12 +546,11 @@
     </div>
      </div>
 
-<footer class="container-fluid text-center bg-pink">
+<footer class="container-fluid text-center bg-purple">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>DESIGN + CODE WITH<i class="fa fa-heart"></i></p><div>
-  <p>© 2017 by Maria Elisa</p>
+  <p>DESIGN + CODE WITH<i class="fa fa-heart"></i>by M.E</p>
 
 </footer>
 
