--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
 <!-- Container (Skill Section) -->
 <div id="skill" class="container-fluid text-center bg-blue">
-  <h2>Skills + Coding + Design</h2><br>
+  <h2>Coding + Design</h2><br>
   
   <div class="row">
       <div class="col-md-4 col-md-offset-2">
