--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   } 
   
   .jumbotron {
-      background-color: #ffdae9;
+      background-color: black;
       color: #fff;
       padding: 100px 25px;
       font-family: Cardo, sans-serif;
@@ -142,7 +142,7 @@
  
   .navbar {
       margin-bottom: 0;
-      background-color: #ffdae9;
+      background-color: black;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -166,7 +166,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #ffdae9 !important;
+      color: black !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
@@ -180,7 +180,7 @@
   }
   
   .progress-bar-custom {
-  background-color: #e6ccff;
+  background-color: black;
   }
 
   .timeline {
@@ -392,7 +392,7 @@
     </div>
     
     <!-- Container (Education) -->
-<div id="education" class="container-fluid bg-mint text-center">
+<div id="education" class="container-fluid text-center">
   <h2>Education</h2><br>
   
   <div class="row">
@@ -457,7 +457,7 @@
 </div>
 
 <!-- Container (Skill Section) -->
-<div id="skill" class="container-fluid text-center bg-blue">
+<div id="skill" class="container-fluid text-center">
   <h2>Coding + Design</h2><br>
   
   <div class="row">
@@ -540,11 +540,11 @@
     </div>
      </div>
 
-<footer class="container-fluid text-center bg-purple">
+<footer class="container-fluid text-center bg-black">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>DESIGN + CODE WITH<i class="fa fa-heart"></i>by M.E</p>
+  <p>DESIGN + CODE by M.E</p>
 
 </footer>
 
