--- a/index.html
+++ b/index.html
@@ -51,18 +51,10 @@
       padding: 60px 50px;
   }
     
-  .bg-mint {
-      background-color: #e2fcea;
+  .bg-black {
+      background-color: black;
   }
   
-   .bg-blue {
-      background-color: #dbe4ff;
-  }
-  
-  .bg-purple {
-      background-color: #f0dbff;
-  }
-
   .fa {
   padding: 4px;
   font-size: 27px;
@@ -391,7 +383,7 @@
     </div>
     
     <!-- Container (Education) -->
-<div id="education" class="container-fluid text-center">
+<div id="education" class="container-fluid text-center bg-black">
   <h2>Education</h2><br>
   
   <div class="row">
