--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
     </div>
     
     <!-- Container (Education) -->
-<div id="education" class="container-fluid text-center bg-black">
+<div id="education" class="container-fluid text-center">
   <h2>Education</h2><br>
   
   <div class="row">
