--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   } 
   
   .jumbotron {
-      background-color: black;
+      background-color: #ffdae9;
       color: #fff;
       padding: 100px 25px;
       font-family: Cardo, sans-serif;
@@ -134,7 +134,7 @@
  
   .navbar {
       margin-bottom: 0;
-      background-color: black;
+      background-color: #ffdae9;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -158,7 +158,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: black !important;
+      color: #ffdae9 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
