--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
   .bg-black {
       background-color: black;
   }
+  .bg-purple {
+      background-color: #f0dbff;
+  }
   
   .fa {
   padding: 4px;
@@ -531,11 +534,12 @@
     </div>
      </div>
 
-<footer class="container-fluid text-center bg-black">
+<footer class="container-fluid text-center bg-purple">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>DESIGN + CODE by M.E</p>
+    <p>CODED WITH<i class="fa fa-heart"></i></p>
+
 
 </footer>
 
