--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   } 
   
   .jumbotron {
-      background-color: #ffdae9;
-      color: #fff;
+      background-color: #f6e8e5;
+      color: black;
       padding: 100px 25px;
       font-family: Cardo, sans-serif;
   }
@@ -73,39 +73,27 @@
   }
   
   .fa-envelope {
-  color: #fff;
+  color: black;
   }
 
   .fa-instagram {
-  color: #fff;
+  color: black;
   }
 
   .fa-twitter {
-  color: #fff;
+  color: black;
   }
 
  .fa-github {
-  color: #fff;
+  color: black;
  }
 
  .fa-linkedin {
-  color: #fff;
+  color: black;
  }
 
- .fa-google {
-   color: #fff;
- }
-
- .fa-tumblr {
-  color: #fff;
- }
-
- .fa-pinterest {
-  color: #fff;
- }
- 
   .fa-file {
-  color: #fff;
+  color: black;
  }
  
    .fa-heart {
@@ -137,7 +125,7 @@
  
   .navbar {
       margin-bottom: 0;
-      background-color: #ffdae9;
+      background-color: #f6e8e5;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -158,11 +146,11 @@
   }
   
   .navbar li a, .navbar .navbar-brand {
-      color: #fff !important;
+      color: black !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #ffdae9 !important;
-      background-color: #fff !important;
+      color: #f6e8e5 !important;
+      background-color: black !important;
   }
   .navbar-default .navbar-toggle {
       border-color: transparent;
