--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   body {
       font: 400 15px Lora, sans-serif;
       line-height: 1.8;
-      color: #818181;
+      color: black;
   }
   h2 {
       font-size: 24px;
@@ -51,11 +51,8 @@
       padding: 60px 50px;
   }
     
-  .bg-black {
-      background-color: black;
-  }
   .bg-purple {
-      background-color: #f0dbff;
+      background-color: #f6e8e5;
   }
   
   .fa {
