--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 <!-- Container (About Me Section) -->
 <div id="about" class="container-fluid ">
   
-      <h2 class="text-center">About Me</h2>
+      <h2 class="text-center">About</h2>
       
      <h5>Hey! I'm Maria. I graduated from South China University of Technology in 2015, major in Computer Science. I began my own coding adventure in 2009 when I need to code and design my blog, probably why I never turn back. I'm a creative thinker, a high achiever, and meticulous person. I have a high-interest towards digital media, tech, and entrepreneurship</h5>
       
