--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   }
     
   .bg-purple {
-      background-color: #f6e8e5;
+      background-color: #ffddf4;
   }
   
   .fa {
@@ -122,7 +122,7 @@
  
   .navbar {
       margin-bottom: 0;
-      background-color: #f6e8e5;
+      background-color: #ffddf4;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
