--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   } 
   
   .jumbotron {
-      background-color: #f6e8e5;
+      background-color: #ffddf4;
       color: black;
       padding: 100px 25px;
       font-family: Cardo, sans-serif;
