--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       padding: 60px 50px;
   }
     
-  .bg-purple {
+  .bg-pink {
       background-color: #ffddf4;
   }
   
@@ -160,7 +160,7 @@
   }
   
   .progress-bar-custom {
-  background-color: #e6ccff;
+  background-color: #ffddf4;
   }
 
   .timeline {
@@ -499,7 +499,7 @@
     </div>
      </div>
 
-<footer class="container-fluid text-center bg-purple">
+<footer class="container-fluid text-center bg-pink">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
