--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#skill">Skills</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -492,6 +493,13 @@
     </div> 
     </div>
      </div>
+
+<!-- Container (Contact Section) -->
+<div id="contact" class="container-fluid text-center">
+  <h2 class="text-center">Contact</h2>
+
+
+</div>
 
 <footer class="container-fluid text-center bg-pink">
   <a href="#myPage" title="To Top">
