--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 <a href="/mariaelisa.pdf" class="fa fa-file"></a>
 <br>
 <br>
-<h5>Hi, I'm Maria! I graduated from South China University of Technology in 2015, major in Computer Science. I began my own coding adventure in 2009 when I need to code and design my blog, probably why I never turn back. I'm a creative thinker, a high achiever, and meticulous person. I have a high-interest towards digital media, tech, and entrepreneurship</h5>
+<h5>Hi, I'm Maria! I'm passionate about tech and design. I began my own coding adventure in 2009 when I need to code and design my blog, probably why I never turn back. I love to create and invent thorugh creativity and ideas. I have a high-interest towards digital media, tech, and entrepreneurship</h5>
   
 </div>
 
