--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
 </nav>
 
 <div id="about" class="jumbotron text-center">
+  <img src="img/profile.jpg" class="img-circle person" width="255" height="255">
   <h1>Maria Elisa</h1>
   
   <!-- Add font awesome icons -->
