--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   } 
   
   .jumbotron {
-      background-color: #ffddf4;
+      background-color: #ffdae1;
       color: black;
       padding: 100px 25px;
       font-family: Cardo, sans-serif;
@@ -52,7 +52,7 @@
   }
     
   .bg-pink {
-      background-color: #ffddf4;
+      background-color: #ffdae1;
   }
   
   .fa {
@@ -122,7 +122,7 @@
  
   .navbar {
       margin-bottom: 0;
-      background-color: #ffddf4;
+      background-color: #ffdae1;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -160,7 +160,7 @@
   }
   
   .progress-bar-custom {
-  background-color: #ffddf4;
+  background-color: #ffdae1;
   }
 
   .timeline {
