--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   } 
   
   .jumbotron {
-      background-color: #ffdae1;
+      background-color: #ffddf4;
       color: black;
       padding: 100px 25px;
       font-family: Cardo, sans-serif;
@@ -52,7 +52,7 @@
   }
     
   .bg-pink {
-      background-color: #ffdae1;
+      background-color: #ffddf4;
   }
   
   .fa {
@@ -122,7 +122,7 @@
  
   .navbar {
       margin-bottom: 0;
-      background-color: #ffdae1;
+      background-color: #ffddf4;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -160,7 +160,7 @@
   }
   
   .progress-bar-custom {
-  background-color: #ffdae1;
+  background-color: #ffddf4;
   }
 
   .timeline {
@@ -348,6 +348,7 @@
 </nav>
 
 <div id="about" class="jumbotron text-center">
+  <img src="img/profile.jpg" class="img-circle person" width="255" height="255">
   <h1>Maria Elisa</h1>
   
   <!-- Add font awesome icons -->
