--- a/index.html
+++ b/index.html
@@ -353,6 +353,8 @@
   <!-- Add font awesome icons -->
 <a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
 <a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
+<a href="https://www.mariaelisa25.github.io/" class="fa fa-github"></a>
+  
 <br>
 <br>
 <h5>Hi, I'm Maria! I'm passionate about tech and design. I began my own coding adventure in 2009 when I need to code and design my blog, probably why I never turn back. I love to create and invent thorugh creativity and ideas. I have a high-interest towards digital media, tech, and entrepreneurship</h5>
