--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
   <!-- Add font awesome icons -->
 <a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
 <a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
-<a href="https://github.com/mariaelisa25/" class="fa-github"></a>
+<a href="https://github.com/mariaelisa25/" class="fa fa-github"></a>
   
 <br>
 <br>
