--- a/index.html
+++ b/index.html
@@ -349,6 +349,8 @@
 
 <div id="about" class="jumbotron text-center">
   <h1>Maria Elisa</h1>
+  <h3>A Creator + Creative + Passionate</h3>  
+  
   
   <!-- Add font awesome icons -->
 <a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
@@ -357,8 +359,6 @@
   
 <br>
 <br>
-<h5>Hi, I'm Maria! I'm passionate about tech and design. I began my own coding adventure in 2009 when I need to code and design my blog, probably why I never turn back. I love to create and invent thorugh creativity and ideas. I have a high-interest towards digital media, tech, and entrepreneurship</h5>
-  
 </div>
 
 
