--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#skill">Skills</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#Contact">Contact</a></li>
+
       </ul>
     </div>
   </div>
@@ -349,7 +351,7 @@
 
 <div id="about" class="jumbotron text-center">
   <h1>Maria Elisa</h1>
-  <h3>A Creator + Creative + Passionate</h3>  
+  <h3>Create + Creative + Passionate</h3>  
   
   
   <!-- Add font awesome icons -->
@@ -490,6 +492,13 @@
       </div>
     </div> 
     </div>
+     </div>
+
+  <!-- Container (Contact Section) -->
+<div id="contact" class="container-fluid">
+  <h2 class="text-center">Contact</h2>
+  
+     
      </div>
 
 <footer class="container-fluid text-center bg-pink">
