--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#skill">Skills</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
 
       </ul>
     </div>
@@ -354,11 +354,7 @@
   <h3>Create + Creative + Passionate</h3>  
   
   
-  <!-- Add font awesome icons -->
-<a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
-<a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
-<a href="https://github.com/mariaelisa25/" class="fa fa-github"></a>
-  
+ 
 <br>
 <br>
 </div>
@@ -498,6 +494,10 @@
 <div id="contact" class="container-fluid">
   <h2 class="text-center">Contact</h2>
   
+   <!-- Add font awesome icons -->
+<a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
+<a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
+<a href="https://github.com/mariaelisa25/" class="fa fa-github"></a>
      
      </div>
 
