--- a/index.html
+++ b/index.html
@@ -494,10 +494,10 @@
 <div id="contact" class="container-fluid">
   <h2 class="text-center">Contact</h2>
   
-   <!-- Add font awesome icons -->
+   <center><!-- Add font awesome icons -->
 <a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
 <a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
-<a href="https://github.com/mariaelisa25/" class="fa fa-github"></a>
+<a href="https://github.com/mariaelisa25/" class="fa fa-github"></a><center>
      
      </div>
 
