--- a/index.html
+++ b/index.html
@@ -494,8 +494,12 @@
 <div id="contact" class="container-fluid">
   <h2 class="text-center">Contact</h2>
   
+  <h4>Personal Website | Blog </h4>
+  
    <center><!-- Add font awesome icons -->
-<a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
+<a href="http://twitter.com/mariaelisalisa_" class="fa fa-twitter"></a>
+<a href="https://instagram.com/mariaelisalisa" class="fa fa-instagram"></a><center>
+<a href="https://pinterest.com/mariaelisalisa_" class="fa fa-pinterest"></a><center>
 <a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
 <a href="https://github.com/mariaelisa25/" class="fa fa-github"></a><center>
      
