--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
   .fa-twitter {
   color: black;
   }
+    
+  .fa-pinterest {
+  color: black;
+  }
 
  .fa-github {
   color: black;
@@ -494,7 +498,8 @@
 <div id="contact" class="container-fluid">
   <h2 class="text-center">Contact</h2>
   
-  <h4>Personal Website | Blog </h4>
+  <h4 class="text-center"><a href="https://mariaelisa25.github.io">Personal Website</a>
+    |<a href="https://mariaelisalisa.blogspot.con">Blog</a> </h4>
   
    <center><!-- Add font awesome icons -->
 <a href="http://twitter.com/mariaelisalisa_" class="fa fa-twitter"></a>
