--- a/index.html
+++ b/index.html
@@ -499,12 +499,12 @@
   <h2 class="text-center">Contact</h2>
   
   <h4 class="text-center"><a href="https://mariaelisa25.github.io">Personal Website</a>
-    |<a href="https://mariaelisalisa.blogspot.con">Blog</a> </h4>
+    | <a href="https://mariaelisalisa.blogspot.con">Blog</a> </h4>
   
    <center><!-- Add font awesome icons -->
 <a href="http://twitter.com/mariaelisalisa_" class="fa fa-twitter"></a>
-<a href="https://instagram.com/mariaelisalisa" class="fa fa-instagram"></a><center>
-<a href="https://pinterest.com/mariaelisalisa_" class="fa fa-pinterest"></a><center>
+<a href="https://instagram.com/mariaelisalisa" class="fa fa-instagram"></a>
+<a href="https://pinterest.com/mariaelisalisa_" class="fa fa-pinterest"></a>
 <a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
 <a href="https://github.com/mariaelisa25/" class="fa fa-github"></a><center>
      
