--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <div id="about" class="jumbotron text-center">
   <h1>Maria Elisa</h1>
-  <h3>Create + Creative + Passionate</h3>  
+  <h3>Functional SAP BI/BW/BPC | Mandarin Speaker</h3>  
    
 <br>
 <br>
