--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="#about">About</a></li>
+        <li><a href="#experience">Portfolio</a></li>
         <li><a href="#skill">Skills</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#resume">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
 
       </ul>
